--- a/melange-basic-template.opam
+++ b/melange-basic-template.opam
@@ -15,20 +15,7 @@ depends: [
   "odoc" {with-doc}
 ]
 build: [
-  ["dune" "subst"] {dev}
-  [
-    "dune"
-    "build"
-    "-p"
-    name
-    "-j"
-    jobs
-    "--promote-install-files=false"
-    "@install"
-    "@runtest" {with-test}
-    "@doc" {with-doc}
-  ]
-  ["dune" "install" "-p" name "--create-install-files" name]
+  ["echo" "run make build"]
 ]
 dev-repo: "git+https://github.com/jchavarri/melange-basic-template.git"
 pin-depends: [
