--- a/melange-basic-template.opam
+++ b/melange-basic-template.opam
@@ -7,8 +7,8 @@ license: "MIT"
 homepage: "https://github.com/jchavarri/melange-basic-template"
 bug-reports: "https://github.com/jchavarri/melange-basic-template/issues"
 depends: [
-  "ocaml" {>= "4.14.1" & < "5.0.0"}
-  "dune" {>= "3.0"}
+  "ocaml" {>= "4.14.0" & < "5.0.0"}
+  "dune" {dev}
   "melange" {dev}
   "melange-compiler-libs" {dev}
   "ocaml-lsp-server" {dev}
@@ -20,6 +20,7 @@ build: [
 ]
 dev-repo: "git+https://github.com/jchavarri/melange-basic-template.git"
 pin-depends: [
-  [ "melange.dev" "git+https://github.com/melange-re/melange.git#cb7d065a5c1cf747c25063508035ff8a955a9bc1" ]
+  [ "dune.dev" "git+https://github.com/jchavarri/dune.git#5596594dd7ca166a05db89d43f031138f46b61fb"]
+  [ "melange.dev" "git+https://github.com/melange-re/melange.git#d97908651f5798855ff61922f1f9ca9513bc1f42" ]
   [ "melange-compiler-libs.dev" "git+https://github.com/melange-re/melange-compiler-libs.git#029354b208335c6aafb3c483ef425c3a4afd1dc1" ]
 ]
